Fixing the home on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -368,28 +368,30 @@ h1, h2, h3, h4, h5, h6, .navigation-text, .subheading-1, .subheading-2 {
   background-image: url("../assets/home/background-home-mobile.jpg"); }
   .home-content .main-container {
     row-gap: 3rem; }
-    .home-content .main-container .main-content .main-title {
-      margin-bottom: 4.3rem; }
-      .home-content .main-container .main-content .main-title .heading-5 {
-        color: var(--light-grey); }
-    .home-content .main-container .main-content .main-content-primary {
-      margin-bottom: 10.7rem; }
-      .home-content .main-container .main-content .main-content-primary .heading-1 {
-        margin-bottom: 6rem; }
-    .home-content .main-container .main-content .explore-home-moon {
-      width: 18.75rem;
-      height: 18.75rem;
-      margin: 0 auto;
-      border-radius: 50%;
-      background-color: #fff;
-      text-transform: uppercase;
-      color: #0B0D17;
-      letter-spacing: 1.25px;
-      font-size: 2.5rem;
-      font-family: 'Bellefair', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+    .home-content .main-container .main-content {
+      align-content: start; }
+      .home-content .main-container .main-content .main-title {
+        margin-bottom: 4.3rem; }
+        .home-content .main-container .main-content .main-title .heading-5 {
+          color: var(--light-grey); }
+      .home-content .main-container .main-content .main-content-primary {
+        margin-bottom: 10.7rem; }
+        .home-content .main-container .main-content .main-content-primary .heading-1 {
+          margin-bottom: 6rem; }
+      .home-content .main-container .main-content .explore-home-moon {
+        width: 18.75rem;
+        height: 18.75rem;
+        margin: 0 auto;
+        border-radius: 50%;
+        background-color: #fff;
+        text-transform: uppercase;
+        color: #0B0D17;
+        letter-spacing: 1.25px;
+        font-size: 2.5rem;
+        font-family: 'Bellefair', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
   @media only screen and (min-width: 48em) {
     .home-content {
       background-image: url("../assets/home/background-home-tablet.jpg"); }
