--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -4,6 +4,7 @@
     .main-container {
         row-gap: 3rem;
         .main-content {
+            align-content: start;
             .main-title {
                 margin-bottom: 4.3rem;
                 .heading-5 {
